src/main/default/objects/Product2/Product2.object-meta.xml
<CustomObject>
    <!-- <sharingModel>ReadWrite</sharingModel> -->
</CustomObject>