src/main/default/objects/Product2/fields/Date_Last_Synced_to_DR__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Synced_to_DR__c</fullName>
    <label>Date Last Synced to DR</label>
    <type>DateTime</type>
</CustomField>