src/main/default/objects/Product2/fields/DR_ECCN__c.field-meta.xml
<CustomField>
    <fullName>DR_ECCN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DR ECCN *</label>
    <referenceTo>DR_ECCN_Lookup__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>