src/main/default/objects/Product2/fields/DR_HS_Code__c.field-meta.xml
<CustomField>
    <fullName>DR_HS_Code__c</fullName>
    <label>DR HS Code</label>
    <length>180</length>
    <type>Text</type>
</CustomField>