src/main/default/objects/Product2/fields/DR_IS_DIGITAL_PRODUCT__c.field-meta.xml
<CustomField>
        <fullName>DR_IS_DIGITAL_PRODUCT__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DR Digital Product</label>
        <type>Checkbox</type>
</CustomField>