src/main/default/objects/Product2/fields/DR_Managed_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>DR_Managed_Fulfillment__c</fullName>
    <description>Signifies the product is physically fulfilled by Digital River</description>
    <inlineHelpText>Signifies the product is physically fulfilled by Digital River</inlineHelpText>
    <label>DR Managed Fulfillment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DRGlobalFulfillment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>