src/main/default/objects/Product2/fields/DR_Manufacturer_Id__c.field-meta.xml
<CustomField>
    <fullName>DR_Manufacturer_Id__c</fullName>
    <label>DR Manufacturer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>