src/main/default/objects/Product2/fields/DR_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>DR_Part_Number__c</fullName>
    <description>The manufacturer’s part number</description>
    <label>DR Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>