src/main/default/objects/Product2/fields/DR_Product_Country_Origin__c.field-meta.xml
<CustomField>
    <fullName>DR_Product_Country_Origin__c</fullName>
    <label>DR Product Country Origin *</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AF</fullName>
                <label>Afghanistan</label>
            </value>
            <value>
                <fullName>AX</fullName>
                <label>Åland Islands</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <label>Albania</label>
            </value>
            <value>
                <fullName>DZ</fullName>
                <label>Algeria</label>
            </value>
            <value>
                <fullName>AS</fullName>
                <label>American Samoa</label>
            </value>
            <value>
                <fullName>AD</fullName>
                <label>Andorra</label>
            </value>
            <value>
                <fullName>AO</fullName>
                <label>Angola</label>
            </value>
            <value>
                <fullName>AI</fullName>
                <label>Anguilla</label>
            </value>
            <value>
                <fullName>AQ</fullName>
                <label>Antarctica</label>
            </value>
            <value>
                <fullName>AG</fullName>
                <label>Antigua And Barbuda</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>Argentina</label>
            </value>
            <value>
                <fullName>AM</fullName>
                <label>Armenia</label>
            </value>
            <value>
                <fullName>AW</fullName>
                <label>Aruba</label>
            </value>
            <value>
                <fullName>AU</fullName>
                <label>Australia</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <label>Austria</label>
            </value>
            <value>
                <fullName>AZ</fullName>
                <label>Azerbaijan</label>
            </value>
            <value>
                <fullName>BS</fullName>
                <label>Bahamas</label>
            </value>
            <value>
                <fullName>BH</fullName>
                <label>Bahrain</label>
            </value>
            <value>
                <fullName>BD</fullName>
                <label>Bangladesh</label>
            </value>
            <value>
                <fullName>BB</fullName>
                <label>Barbados</label>
            </value>
            <value>
                <fullName>BY</fullName>
                <label>Belarus</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <label>Belgium</label>
            </value>
            <value>
                <fullName>BZ</fullName>
                <label>Belize</label>
            </value>
            <value>
                <fullName>BJ</fullName>
                <label>Benin</label>
            </value>
            <value>
                <fullName>BM</fullName>
                <label>Bermuda</label>
            </value>
            <value>
                <fullName>BT</fullName>
                <label>Bhutan</label>
            </value>
            <value>
                <fullName>BO</fullName>
                <label>Bolivia, Plurinational State Of</label>
            </value>
            <value>
                <fullName>BQ</fullName>
                <label>Bonaire, Sint Eustatius And Saba</label>
            </value>
            <value>
                <fullName>BA</fullName>
                <label>Bosnia And Herzegovina</label>
            </value>
            <value>
                <fullName>BW</fullName>
                <label>Botswana</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>