src/main/default/objects/Product2/fields/DR_Product_Weight__c.field-meta.xml
<CustomField>
    <fullName>DR_Product_Weight__c</fullName>
    <description>The weight of the product measured in the unit specified by DR Unit of weight.</description>
    <inlineHelpText>The weight of the product measured in the unit specified by DR Unit of weight.</inlineHelpText>
    <label>DR Product Weight</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>