src/main/default/objects/Product2/fields/DR_SKU_Group__c.field-meta.xml
<CustomField>
    <fullName>DR_SKU_Group__c</fullName>
    <label>DR SKU Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>