src/main/default/objects/Product2/fields/DR_TAXGROUP__c.field-meta.xml
<CustomField>
    <fullName>DR_TAXGROUP__c</fullName>
    <label>DR TAXGROUP *</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Downloadable Goods (Non-Software)</fullName>
            </value>
            <value>
                <fullName>Food, Beverage &amp; Household</fullName>
            </value>
            <value>
                <fullName>Physical Goods</fullName>
            </value>
            <value>
                <fullName>Services &amp; Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Software (Downloadable &amp; Physical)</fullName>
            </value>
            <value>
                <fullName>Warranties</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>