src/main/default/objects/Product2/fields/DR_TAXTYPE__c.field-meta.xml
<CustomField>
    <fullName>DR_TAXTYPE__c</fullName>
    <label>DR TAXTYPE *</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DR_TAXGROUP__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>DR_TAXTYPES</valueSetName>
    </valueSet>
</CustomField>