src/main/default/objects/Product2/fields/DR_Unit_of_Weight__c.field-meta.xml
<CustomField>
    <fullName>DR_Unit_of_Weight__c</fullName>
    <description>Unit of measurement applied to DR</description>
    <inlineHelpText>Unit of measurement applied to DR</inlineHelpText>
    <label>DR Unit of Weight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>oz</fullName>
            </value>
            <value>
                <fullName>lb</fullName>
            </value>
            <value>
                <fullName>g</fullName>
            </value>
            <value>
                <fullName>Kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>