src/main/default/objects/Product2/fields/Sync_Product_to_DR__c.field-meta.xml
<CustomField>
    <fullName>Sync_Product_to_DR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Product to DR</label>
    <type>Checkbox</type>
</CustomField>